--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
-
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aelityx | Transformando Datos en Conocimiento Profundo</title>
-    <meta name="description" content="En Aelityx impulsamos la innovación y la evolución tecnológica a través de soluciones científicas, digitales y humanas para una evolución inteligente." />
-    <meta name="author" content="Aelityx" />
-    <meta name="keywords" content="Aelityx, inteligencia artificial, dashboards, ciencia de datos México, simulación Monte Carlo, consultoría IA, Mauricio Rosales Aelityx" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="Aelityx | Transformando Datos en Conocimiento" />
-    <meta property="og:description" content="Soluciones científicas, digitales y humanas para una evolución inteligente." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <title>Aelityx | Transformando Datos en Conocimiento Profundo</title>
+  <meta name="description" content="En Aelityx impulsamos la innovación y la evolución tecnológica a través de soluciones científicas, digitales y humanas para una evolución inteligente." />
+  <meta name="author" content="Aelityx" />
+  <meta name="keywords" content="Aelityx, inteligencia artificial, dashboards, ciencia de datos México, simulación Monte Carlo, consultoría IA, Mauricio Rosales Aelityx" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@aelityx" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="Aelityx | Transformando Datos en Conocimiento Profundo" />
+  <meta property="og:description" content="Soluciones científicas, digitales y humanas para una evolución inteligente." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/aelityx.svg" />
+  <meta property="og:url" content="https://aelityx.com" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
+  <!-- Twitter Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@aelityx" />
+  <meta name="twitter:image" content="/aelityx.svg" />
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- Favicon & Logo -->
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/aelityx.svg" />
+  <link rel="shortcut icon" href="/aelityx.svg" type="image/svg+xml" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+<div id="root"></div>
+
+<!-- Tu build principal -->
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
